@@ -178,8 +178,7 @@ by the xymonlaunch tasks.cfg file.
 
 .IP "\-\-pidfile=FILENAME"
 xymond writes the process-ID it is running with to this file.
-This is for use in automated startup scripts. The default file is
-$XYMONSERVERLOGS/xymond.pid.
+This is for use in automated startup scripts.
 
 .IP "\-\-log=FILENAME"
 Redirect all output from xymond to FILENAME.
