@@ -99,7 +99,7 @@ Runs xymonproxy as a foreground process.
 
 .IP "\-\-pidfile=FILENAME"
 Specifies the location of a file containing the process-ID 
-of the xymonproxy daemon process. Default: /var/run/xymonproxy.pid.
+of the xymonproxy daemon process.
 
 .IP "\-\-logfile=FILENAME"
 Sends all logging output to the specified file instead of stderr.
