@@ -212,6 +212,7 @@ xymon (4.4.0-alpha1) unstable; urgency=low
    * xymond: Attempt to continue startup even if a previous worker is still
      attached to the channel.
    * Add ability to filter/filelist when displaying graphs (Thanks, Stef Coene)
+   * No longer generate a PID file by default (when --pid not given)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  XXX, ## MMM 2016 00:00:00 +0100
 
